--- a/static/css/home.css
+++ b/static/css/home.css
@@ -59,6 +59,12 @@ body{
     color: rgb(179, 80, 0);
 }
 
+#perfil{
+    width: 40px;
+    height: 40px;
+    border-radius: 180%;
+}
+
 h5{
     color: white;
     margin-top: 35px;
@@ -77,87 +83,38 @@ h1{
 }
 
 /*  FOOTER  */
-
-
-footer{
-    position: relative;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgb(100,100,100);
-    background-blend-mode: soft-light;
-    height: auto;
-    width: 100vw;
-    padding-top: 40px;
-    color:white;
-    margin-top: 870px;
+ 
+.footer{
+    margin-top: 796px;
 }
 
-.footer-content{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
+#icono{
+    margin-top: 17px;
+
 }
 
-.footer-content h3{
-    font-size: 1.8rem;
-    font-weight: 400;
-    text-transform: capitalize;
-    line-height: 3rem;
-}
-
-.footer-content p{
-    max-width: 400px;
-    margin: 10px auto;
-    line-height: 28px;
-    font-size: 14px;
-}
-
-.social{
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem 0 3rem 0;
-}
-
-.social li{
-    margin: 0 10px;
-}
-.social a{
+#icono a{
     text-decoration: none;
     color: white;
 }
 
-.social a i{
+#icono a i{
     font-size: 1.1rem;
     transition: color .4s ease;
 }
 
-.social a:hover {
+#icono a:hover {
     color:rgb(204, 99, 0);
 }
 
-.footer-botton{
-    background-color: rgba(14, 14, 14, 0.377);
-    width: 100vw;
-    padding: 20px 0;
-    text-align: center;
+
+
+
+/*RESPONSIVE*/
+
+@media only screen and (max-width:768px){
+
+    #home .home{
+        float: left;
+    }
 }
-
-.footer-botton p{
-    font-size: 14px;
-    word-spacing: 2px;
-    text-transform: capitalize;
-}
-
-.footer-botton span{
-    text-transform: uppercase;
-    opacity: .4;
-    font-weight: 200;
-}
-
-
-
